--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-plus": "^2.5.3",
     "idb": "^8.0.2",
     "js-cookie": "^3.0.5",
+    "jsstore": "^4.9.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
@@ -38,6 +39,8 @@
     "sass": "^1.70.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.12",
+    "vite-plugin-externals": "^0.6.2",
+    "vite-plugin-file": "^1.0.5",
     "vite-plugin-mock": "^3.0.2"
   }
 }
