--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^1.0.2",
     "axios": "^1.6.7",
+    "dexie": "^4.0.11",
     "echarts": "^5.6.0",
     "element-plus": "^2.5.3",
-    "idb": "^8.0.2",
     "js-cookie": "^3.0.5",
-    "jsstore": "^4.9.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "vite-plugin-static-copy": "^2.3.0",
     "vue": "^3.4.15",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.2.5"
@@ -40,7 +40,6 @@
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.12",
     "vite-plugin-externals": "^0.6.2",
-    "vite-plugin-file": "^1.0.5",
     "vite-plugin-mock": "^3.0.2"
   }
 }
