--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@wangeditor/editor-for-vue": "^1.0.2",
     "axios": "^1.6.7",
     "dexie": "^4.0.11",
+    "dexie-observable": "^4.0.1-beta.13",
     "echarts": "^5.6.0",
     "element-plus": "^2.5.3",
     "js-cookie": "^3.0.5",
