--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # 开发环境配置
 NODE_ENV=development
-VITE_APP_API_BASE_URL=http://localhost:3000/api
+VITE_APP_API_BASE_URL=http://43.138.255.36:44392/api
 VITE_APP_BASE_URL=/
-VITE_APP_UPLOAD_URL=http://localhost:3000/upload
+VITE_APP_UPLOAD_URL=http://43.138.255.36:44392
