--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^3.0.5",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "vite-plugin-static-copy": "^2.3.0",
     "vue": "^3.4.15",
     "vue-echarts": "^7.0.3",
