--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^1.0.2",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
     "dexie-observable": "^4.0.1-beta.13",
     "echarts": "^5.6.0",
     "element-plus": "^2.5.3",
+    "https": "^1.0.0",
     "js-cookie": "^3.0.5",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
