--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "element-plus": "^2.5.3",
     "https": "^1.0.0",
     "js-cookie": "^3.0.5",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^4.5.0",
